--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,3 +20,4 @@ jobs:
         USER_PASS: ${{ secrets.USER_PASS }}
         RESEPORT: ${{ secrets.RESEPORT }}
         REHOST: ${{ secrets.REHOST }}
+        DINGBOTURL: ${{ secrets.DINGBOTURL }}
